k8s/fap-log-viewer/base/tls/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: fap-log-viewer
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: fap-log-viewer-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /api
    forceSlash: false
