k8s/fap-log-viewer/base/tls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fap-ingress
  namespace: fap-log-viewer
  annotations:
    cert-manager.io/cluster-issuer: "cluster-issuer"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: faplog.pl
      http:
        paths:
          - backend:
              service:
                name: http-backend
                port:
                  number: 3000
            path: /api/
            pathType: Prefix
          - backend:
              service:
                name: frontend
                port:
                  number: 4321
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - faplog.pl
      secretName: fap-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fap-ingress-http
  namespace: fap-log-viewer
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: fap-log-viewer-https-redirect@kubernetescrd
spec:
  rules:
    - host: faplog.pl
      http:
        paths:
          - backend:
              service:
                name: http-backend
                port:
                  number: 3000
            path: /api
            pathType: Prefix
          - backend:
              service:
                name: frontend
                port:
                  number: 4321
            path: /
            pathType: Prefix
